# vaultic-408-openssl-provider

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/libVaultIC/: README.txt
lib/libVaultIC/408/certificate/s_client/: deviceCert_ECC.pem  deviceCert_RSA.pem
lib/libVaultIC/408/certificate/s_server/: rootCACert_ECC.pem  rootCACert_RSA.pem  serverCert_ECC.pem  serverCert_RSA.pem  serverKey_ECC.pem  serverKey_RSA.pem
lib/libVaultIC/408/vaultic_tls-4xx/src/: CMakeLists.txt  functions.cmake  vaultic_tls.c  vaultic_tls.h  vaultic_tls_config.h
provider/: vic408_Provider_Signature_ec.c  vic408_Provider_Signature_rsa.c  vic408_Provider_get_capabilities.c  vic408_Provider_keyManament_ec.c  vic408_Provider_keyManament_rsa.c  vic408_Provider_main.c  vic408_Provider_main.h  vic408_Provider_rand.c  vic408_Provider_store.c
